--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.aceland.kalmanfilter",
-  "version": "2.0.9",
+  "version": "1.0.1",
   "displayName": "AceLand Kalman Filter",
   "description": "AceLand Kalman Filter is Math Model.\n\nPlease visit our [Git Book](https://aceland-workshop.gitbook.io/aceland-unity-packages).",
   "unity": "2022.3",
@@ -21,7 +21,8 @@
   ],
   "dependencies": {
     "com.unity.mathematics": "1.3.2",
-    "com.aceland.library": "2.0.9"
+    "com.unity.burst": "1.8.25",
+    "com.aceland.library": "2.0.10"
   },
   "publishConfig": {
     "registry": "https://package.openupm.com"
