--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "com.aceland.kalmanfilter",
-  "version": "2.0.10",
+  "version": "2.0.11",
   "displayName": "AceLand Kalman Filter",
   "description": "AceLand Kalman Filter is Math Model.\n\nPlease visit our [Git Book](https://aceland-workshop.gitbook.io/aceland-unity-packages).",
   "unity": "2022.3",
@@ -11,8 +11,8 @@
   "license": "MIT",
   "author": {
     "name": "Parsue - AceLand Workshop",
-    "email": "parsue@gmail.com",
-    "url": "https://www.parsue.io/"
+    "url": "https://www.parsue.io/",
+    "email": "parsue@gmail.com"
   },
   "keywords": [
     "aceland",
@@ -21,12 +21,13 @@
   ],
   "dependencies": {
     "com.unity.mathematics": "1.3.2",
-    "com.unity.burst": "1.8.25",
-    "com.aceland.library": "2.0.10"
+    "com.unity.burst": "1.8.25"
   },
   "publishConfig": {
     "registry": "https://package.openupm.com"
   },
   "documentationUrl": "https://docs.parsue.io/aceland-unity-packages",
-  "type": "utility"
+  "type": "utility",
+  "licensesUrl": "https://docs.parsue.io/aceland-unity-packages/getting-started/license",
+  "changelogUrl": "https://docs.parsue.io/aceland-unity-packages/packages/kalman-filter/change-log"
 }
